<resources>
    <string name="app_name">EatIt</string>
    <string name="app_title">EATit</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_all_foods">AllFoods</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_food_detail">FoodDetailActivity</string>
    <string name="title_activity_all_meals">AllMealsActivity</string>
    <string name="title_activity_meal_detail">MealDetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_food">AddFoodActivity</string>
    <string name="title_activity_add_meal">AddMealActivity</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="data">Data</string>
    <string name="settings">Settings</string>
    <string name="title_activity_all_eats">AllEatsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="foods">Foods</string>
    <string name="meals">Meals</string>
    <string name="foods_test_text">All Foods List To Go Here!</string>
    <string name="foods_tab">Foods</string>
    <string name="meals_tab">Meals</string>
    <string name="title_activity_add_eats">AddEatsActivity</string>
    <string name="add_new_food">New Food</string>
    <string name="add_new_meal">New Meal</string>
    <string name="create_food">Create Food</string>
    <string name="create_meal">Create Meal</string>
    <string name="save_button">SAVE</string>
    <string name="food_log">Food Log</string>
</resources>
